# Cybersecurity-Practicum

./: .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json  CLAUDE.md  CONTEXT.md  Dockerfile  README.md  alembic.ini  compose.base.yaml  compose.forward-auth.yaml  compose.publish.yaml  config.example.yaml  entrypoint.sh  pyproject.toml  skills-lock.json
.agents/prompts/: clear-issue.md
.claude/: settings.json  settings.local.json
.claude/hooks/: block-inline-gh-body.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.scratch/: README.md
.scratch/security/: 0001-in-proxy-rate-limiting.md
Practicum Work/: Group Assignments.md  references.bib
Practicum Work/Final Presentation/: .gitignore  .markdownlint.jsonc  Assignment.md  How to give a technical presentation (how to give a scientific talk).htm  final_presentation_deck.html  final_presentation_deck.md  presentation-spec.md  script-beats.md  shai-hulud-spread.mmd
Practicum Work/Final Report/: Assignment.md  How to write a technical paper or a research paper.htm  fragments.md  outline.md  report.tex
Practicum Work/Office Hours/: Week 1 (May 18th) Office Hours Summary.md  Week 3 (June 1st) Office Hours Summary.md  Week 4 (June 8th) Office Hours Summary.md  week5_office_hours_summary.md  week6_office_hours_summary.md
Practicum Work/Progress Reports/: Progress Report 1.tex  Progress Report 2.tex  Progress Report 3.tex  Progress Report 4 Notes.md  Progress Report 4.tex  Progress Report 5.tex  Project Proposal.tex  references.bib
Practicum Work/Videos/: Assignment.md  Ian Barish - Video 2.srt  Multi-Sig_Web_Proxy___Week_1.pptx  Video 1 Replies.json  Video 1.srt  Video 2 Plan.md  Video 2 Replies.md  eval.mmd  render-deck.py  video2_deck.py  video3_deck.md  video3_deck.pptx  video4_deck.md  video4_deck.pptx  video_deck_style.css
Progress Reports/: Group Assignments.md  Progress Report 1.tex  Project Proposal.tex  Video 1 Replies.json  Week 1 Progress Report.tex  template.tex
Research/: Broad Literature Review.md
Research/Papers/: DKLS.md  FROST.md  GG20.md  MPC-Communication-Graphs.md  MuSig2.md  research_template.md  research_template.tex
config/: config.example.yaml  users.example.yaml
demo/: README.md
demo/notebooks/: demo_flow.py  demo_lib.py  publish_demo.py
demo/seed/: config.demo.yaml  users.demo.yaml
docs/: account-management.md  approver-authentication.md  architecture.md  config.md  constraints.md  cryptography.md  deployment.md  evaluation-action-plan.md  evaluation-capabilities.yaml  evaluation-demo.md  evaluation-plan.md  ideas.md  index.md  mvp-prd.md  mvp.md  notification-system.md  request-lifecycle.md  source-layout.md  temp-PR4-Review.md  threat-model-presentation-handoff.md  threat-model.md  todo.md  web-proxy.md
docs/adr/: 0001-credential-backed-approval.md  0002-asymmetric-key-approval-signing.md  0002-per-service-yaml-configuration.md  0003-cryptographic-primitive-selection.md  0003-decoupled-notification-system.md  0004-asymmetric-key-approval-signing.md  0004-per-service-access-control-scoping.md  0005-decoupled-notification-system.md  0005-ed25519-over-rsa-p256.md  0006-build-proxy-from-scratch.md  0006-pbkdf2-for-key-derivation.md  0007-aes-256-gcm-for-encryption.md  0007-two-aggregate-request-model.md  0008-bcrypt-for-password-hashing.md  0008-snapshot-approver-set-at-creation.md  0009-append-only-vote-model.md  0009-build-proxy-from-scratch.md  0010-requesters-authenticated-not-signing.md  0011-technology-stack.md  0012-vertical-slice-package-layout.md  0013-container-deployment-and-runtime-model.md  0014-typed-lifecycle-events.md  0015-tamper-evident-db-records-two-trust-roots.md  index.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/research/: Broad Literature Review.md  PyPi Use Case Research.md  index.md
docs/threat-model/: 00-overview.md  CODE-1-application-layer-vulnerability.md  CODE-2-supply-chain-attack-on-the-proxy-itself.md  CONTRIBUTING.md  CORE-1-single-approver-account-compromise.md  CORE-2-api-token-theft.md  CORE-3-insider-collusion.md  CORE-4-authorization-repudiation.md  CRYPTO-1-cryptographic-implementation-failure.md  CRYPTO-2-cryptographic-side-channel-leakage.md  CRYPTO-3-transport-and-pki-trust-failure.md  DOS-1-request-resource-flooding.md  DOS-2-destructive-availability-attack.md  DOS-3-compromised-approver-as-denial-of-service.md  DOS-4-approver-withholding.md  HOST-1-proxy-host-compromise.md  HOST-2-database-write-compromise.md  HOST-3-database-read-compromise.md  HOST-4-database-repudiation-attack.md  HOST-5-configured-service-credential-exposure-at-rest.md  IDENT-1-admin-account-compromise.md  IDENT-2-enrollment-link-interception.md  IDENT-3-notification-channel-interception.md  IDENT-4-phishable-approver-authentication.md  IDENT-5-no-anti-automation-on-authentication-endpoints.md  IDENT-6-declarative-provisioning-rogue-admin-injection.md  INFO-1-information-disclosure-via-quorum-status-approver-visibility.md  PHASE-C-HANDOFF.md  PHASE-C-PREP.md  PUB-1-package-swap-between-upload-and-publication.md  PUB-2-proxy-bypass.md  PUB-3-external-account-recovery-bypass.md  REVIEW-2026-07-03-catalog-audit.md  REVIEW-PLAN.md  T01-single-approver-account-compromise.md  T02-compromised-approver-as-denial-of-service.md  T03-approver-withholding.md  T04-proxy-host-compromise.md  T05-database-read-compromise.md  (+41 more)
migrations/: env.py
tests/: conftest.py  support.py  test_admin_portal.py  test_app_boot.py  test_approve.py  test_auth_gate.py  test_auth_latency.py  test_config.py  test_crypto.py  test_db.py  test_enrollment.py  test_execution.py  test_executor.py  test_forward_auth.py  test_forward_auth_prefactor.py  test_harness.py  test_health.py  test_intake.py  test_keys.py  test_login.py  test_migrations.py  test_notification_subscriber.py  test_post_approval.py  test_pypi_upload.py  test_request_solicitation.py  test_seed.py  test_service_grant.py  test_sessions.py  test_token_auth.py  test_user_portal.py  test_votes.py  test_voting.py
tools/: capabilities.py  evidence.py  threat_model.py
(+203 files in other folders)
