[project]
name = "cybersecurity-practicum"
version = "0.1.0"
description = "Multi-Signature Authentication Web Proxy — m-of-n approval as a general-purpose web auth primitive (CS 6727 practicum)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosmtplib>=5.1.1",
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "cryptography>=49.0.0",
    "fastapi>=0.137.2",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyotp>=2.10.0",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "aiosmtpd>=1.4.6",
    "marimo>=0.23.10",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
    "ruff>=0.15.18",
    "ty>=0.0.50",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/msig_proxy"]

[tool.ruff]
src = ["src", "tests"]
target-version = "py314"
line-length = 100
# Course/marimo materials under "Practicum Work" are not part of the proxy package.
extend-exclude = ["Practicum Work"]

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I isort, B bugbear, UP pyupgrade, S flake8-bandit (security),
# ASYNC flake8-async, A flake8-builtins, RUF ruff-specific. S is on deliberately: this is a
# security project and bandit-style rules earn their keep.
select = ["E", "W", "F", "I", "B", "UP", "S", "ASYNC", "A", "RUF"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom puts `Depends(...)`/`Query(...)` calls in
# argument defaults on purpose; they are not the mutable-default footgun B008 targets.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Header",
    "fastapi.Form",
    "fastapi.File",
]

[tool.ruff.lint.per-file-ignores]
# Tests legitimately use assert (S101), bind to all interfaces / use test creds
# (S104, S106), and embed throwaway secrets in fixtures (S105).
"tests/**" = ["S101", "S104", "S105", "S106"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=msig_proxy --cov-report=term-missing"

[tool.coverage.run]
source = ["msig_proxy"]

[tool.ty.environment]
python-version = "3.14"
