[project]
name = "cybersecurity-practicum"
version = "0.1.0"
description = "Multi-Party Authorization Proxy — m-of-n approval as a general-purpose web auth primitive (CS 6727 practicum)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosmtplib>=5.1.1",
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "cryptography>=49.0.0",
    "fastapi>=0.137.2",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyotp>=2.10.0",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
# Bootstrap entry points (#100). The container entrypoint runs `msig-provision`
# after migrations; `hash-credentials` is run offline (e.g. `docker run --rm
# <image> hash-credentials ...`) to mint a pre-credentialed users.yaml entry.
msig-provision = "msig_proxy.accounts.provision:main"
hash-credentials = "msig_proxy.accounts.hash_credentials:main"
# Out-of-band publish reconciliation (PUB-2, #124). Run on a schedule (cron):
# fetches the configured PyPI service's public release list and alerts on any
# release absent from the proxy's publish log (a complete-mediation violation).
msig-reconcile = "msig_proxy.service_types.one_time.reconcile:main"
# The evidence-catalog tools (threat_model.py #130; capabilities.py + evidence.py #157) are
# deliberately NOT entry points: they are repo dev/analysis tooling that reads docs/ (never
# shipped in the wheel), so an installed console script would have no catalog to operate on.
# Run them from a repo checkout, standalone via PEP 723: `uv run tools/evidence.py suite`.

[dependency-groups]
dev = [
    "aiosmtpd>=1.4.6",
    "altair>=5.5.0",
    "marimo>=0.23.10",
    "pandas>=2.3.0",
    "pyarrow>=24.0.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
    "ruff>=0.15.18",
    "twine>=6.2.0",
    "ty>=0.0.50",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# The wheel is the runtime proxy only. The evidence-catalog dev tools (tools/*.py) are
# intentionally excluded — they are not part of the package (run them via `uv run` from a
# checkout); tests, the dashboard, and demo_lib import them by putting tools/ on sys.path.
packages = ["src/msig_proxy"]

[tool.ruff]
src = ["src", "tests"]
target-version = "py314"
line-length = 100
# Course/marimo materials under "Practicum Work" and the agent-skill scaffolding
# under ".agents" (marimo deck templates, etc.) are not part of the proxy package.
# The threat-model dashboard and the evaluation-demo notebook are marimo notebooks
# (generated cell structure: display-expression cells, unused cell args) — interactive
# artifacts, excluded like the other marimo materials. Their tested flow logic lives in
# plain modules that are NOT excluded (tools/threat_model.py, demo/notebooks/demo_lib.py).
extend-exclude = [
    "Practicum Work",
    ".agents",
    "docs/threat-model/threat_model_dashboard.py",
    "demo/notebooks/publish_demo.py",
]

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I isort, B bugbear, UP pyupgrade, S flake8-bandit (security),
# ASYNC flake8-async, A flake8-builtins, RUF ruff-specific. S is on deliberately: this is a
# security project and bandit-style rules earn their keep.
select = ["E", "W", "F", "I", "B", "UP", "S", "ASYNC", "A", "RUF"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom puts `Depends(...)`/`Query(...)` calls in
# argument defaults on purpose; they are not the mutable-default footgun B008 targets.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Header",
    "fastapi.Form",
    "fastapi.File",
]

[tool.ruff.lint.per-file-ignores]
# Tests legitimately use assert (S101), bind to all interfaces / use test creds
# (S104, S106), and embed throwaway secrets in fixtures (S105).
"tests/**" = ["S101", "S104", "S105", "S106"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=msig_proxy --cov-report=term-missing"

[tool.coverage.run]
source = ["msig_proxy"]

[tool.ty.environment]
python-version = "3.14"
# `tools/` holds single-file dev scripts (e.g. threat_model.py, #130) and
# `demo/notebooks/` holds the demo-support module (demo_lib.py, #143) — neither is
# part of the msig_proxy package; add them so their tests can import them by name
# (the pytest suite puts the same dirs on sys.path via conftest).
extra-paths = ["tools", "demo/notebooks"]

[tool.ty.src]
# The threat-model dashboard and the evaluation-demo notebook are marimo notebooks;
# like the other marimo materials they are excluded from static type-checking. Their
# tested flow logic lives in plain modules that ARE checked (tools/threat_model.py,
# demo/notebooks/demo_lib.py).
exclude = [
    "docs/threat-model/threat_model_dashboard.py",
    "demo/notebooks/publish_demo.py",
]
